src/parser.output
Terminals unused in grammar

    MOD_ASSIGNMENT
    USING
    GOTO
    SCANF
    PRINTF


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_VAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression POINTER_OPERATOR IDENTIFIER
   11                   | postfix_expression INCREMENT
   12                   | postfix_expression DECREMENT

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | INCREMENT unary_expression
   17                 | DECREMENT unary_expression
   18                 | unary_operator cast_expression
   19                 | SIZEOF unary_expression
   20                 | SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '/'
   25               | '-'
   26               | '~'
   27               | '!'
   28               | NEW
   29               | DELETE

   30 cast_expression: unary_expression
   31                | '(' type_name ')' cast_expression

   32 multiplicative_expression: cast_expression
   33                          | multiplicative_expression '*' cast_expression
   34                          | multiplicative_expression '/' cast_expression
   35                          | multiplicative_expression '%' cast_expression

   36 additive_expression: multiplicative_expression
   37                    | additive_expression '+' multiplicative_expression
   38                    | additive_expression '-' multiplicative_expression

   39 shift_expression: additive_expression
   40                 | shift_expression LEFT_SHIFT_OPERATOR additive_expression
   41                 | shift_expression RIGHT_SHIFT_OPERATOR additive_expression

   42 relational_expression: shift_expression
   43                      | relational_expression '<' shift_expression
   44                      | relational_expression '>' shift_expression
   45                      | relational_expression LESS_EQUAL_OPERATOR shift_expression
   46                      | relational_expression GREATER_EQUAL_OPERATOR shift_expression

   47 equality_expression: relational_expression
   48                    | equality_expression EQUAL_LOGICAL relational_expression
   49                    | equality_expression NOT_EQUAL_OPERATOR relational_expression

   50 and_expression: equality_expression
   51               | and_expression '&' equality_expression

   52 exclusive_or_expression: and_expression
   53                        | exclusive_or_expression '^' and_expression

   54 inclusive_or_expression: exclusive_or_expression
   55                        | inclusive_or_expression '|' exclusive_or_expression

   56 logical_and_expression: inclusive_or_expression
   57                       | logical_and_expression AND_LOGICAL inclusive_or_expression

   58 logical_or_expression: logical_and_expression
   59                      | logical_or_expression OR_LOGICAL logical_and_expression

   60 conditional_expression: logical_or_expression
   61                       | logical_or_expression '?' expression ':' conditional_expression

   62 assignment_expression: conditional_expression
   63                      | unary_expression assignment_operator assignment_expression

   64 assignment_operator: '='
   65                    | PRODUCT_ASSIGNMENT
   66                    | DIVIDE_ASSIGNMENT
   67                    | ADD_ASSIGNMENT
   68                    | SUBTRACT_ASSIGNMENT
   69                    | AND_ASSIGNMENT
   70                    | XOR_ASSIGNMENT
   71                    | OR_ASSIGNMENT

   72 expression: assignment_expression
   73           | expression ',' assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'

   77 declaration_specifiers: storage_class_specifier
   78                       | storage_class_specifier declaration_specifiers
   79                       | type_specifier
   80                       | type_specifier declaration_specifiers
   81                       | type_qualifier
   82                       | type_qualifier declaration_specifiers

   83 init_declarator_list: init_declarator
   84                     | init_declarator_list ',' init_declarator

   85 init_declarator: declarator
   86                | declarator '=' initializer

   87 storage_class_specifier: TYPEDEF
   88                        | AUTO

   89 type_specifier: VOID
   90               | CHAR
   91               | SHORT
   92               | INT
   93               | BOOL
   94               | LONG
   95               | FLOAT
   96               | DOUBLE
   97               | SIGNED
   98               | UNSIGNED
   99               | STRING
  100               | struct_specifier

  101 struct_specifier: struct_ IDENTIFIER '{' struct_declaration_list '}'
  102                 | struct_ '{' struct_declaration_list '}'
  103                 | struct_ IDENTIFIER

  104 struct_: STRUCT

  105 struct_declaration_list: struct_declaration
  106                        | struct_declaration_list struct_declaration

  107 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  108 specifier_qualifier_list: type_specifier specifier_qualifier_list
  109                         | type_specifier
  110                         | type_qualifier specifier_qualifier_list
  111                         | type_qualifier

  112 struct_declarator_list: struct_declarator
  113                       | struct_declarator_list ',' struct_declarator

  114 struct_declarator: declarator
  115                  | ':' constant_expression
  116                  | declarator ':' constant_expression

  117 type_qualifier: CONST

  118 declarator: pointer direct_declarator
  119           | direct_declarator

  120 direct_declarator: IDENTIFIER
  121                  | '(' declarator ')'
  122                  | direct_declarator '[' constant_expression ']'
  123                  | direct_declarator '[' ']'
  124                  | direct_declarator '(' parameter_type_list ')'
  125                  | direct_declarator '(' identifier_list ')'
  126                  | direct_declarator '(' ')'

  127 pointer: '*'
  128        | '*' type_qualifier_list
  129        | '*' pointer
  130        | '*' type_qualifier_list pointer

  131 type_qualifier_list: type_qualifier
  132                    | type_qualifier_list type_qualifier

  133 parameter_type_list: parameter_list

  134 parameter_list: parameter_declaration
  135               | parameter_list ',' parameter_declaration

  136 parameter_declaration: declaration_specifiers declarator
  137                      | declaration_specifiers abstract_declarator
  138                      | declaration_specifiers

  139 identifier_list: IDENTIFIER
  140                | identifier_list ',' IDENTIFIER

  141 type_name: specifier_qualifier_list
  142          | specifier_qualifier_list abstract_declarator

  143 abstract_declarator: pointer
  144                    | direct_abstract_declarator
  145                    | pointer direct_abstract_declarator

  146 direct_abstract_declarator: '(' abstract_declarator ')'
  147                           | '[' ']'
  148                           | '[' constant_expression ']'
  149                           | direct_abstract_declarator '[' ']'
  150                           | direct_abstract_declarator '[' constant_expression ']'
  151                           | '(' ')'
  152                           | '(' parameter_type_list ')'
  153                           | direct_abstract_declarator '(' ')'
  154                           | direct_abstract_declarator '(' parameter_type_list ')'

  155 initializer: assignment_expression
  156            | '{' initializer_list '}'
  157            | '{' initializer_list ',' '}'

  158 initializer_list: initializer
  159                 | initializer_list ',' initializer

  160 statement: labeled_statement
  161          | compound_statement
  162          | expression_statement
  163          | selection_statement
  164          | iteration_statement
  165          | jump_statement

  166 labeled_statement: IDENTIFIER ':' statement
  167                  | CASE constant_expression ':' statement
  168                  | DEFAULT ':' statement

  169 compound_statement: '{' '}'
  170                   | '{' statement_list '}'
  171                   | '{' declaration_list '}'
  172                   | '{' declaration_list statement_list '}'

  173 declaration_list: declaration
  174                 | declaration_list declaration

  175 statement_list: statement
  176               | statement_list statement

  177 expression_statement: ';'
  178                     | expression ';'

  179 selection_statement: IF '(' expression ')' statement stmt
  180                    | SWITCH '(' expression ')' statement

  181 stmt: ELSE statement
  182     | statement

  183 iteration_statement: WHILE '(' expression ')' statement
  184                    | DO statement WHILE '(' expression ')' ';'
  185                    | FOR '(' expression_statement expression_statement ')' statement
  186                    | FOR '(' expression_statement expression_statement expression ')' statement

  187 jump_statement: CONTINUE ';'
  188               | BREAK ';'
  189               | RETURN ';'
  190               | RETURN expression ';'

  191 translation_unit: external_declaration
  192                 | translation_unit external_declaration

  193 external_declaration: function_definition
  194                     | declaration

  195 function_definition: declaration_specifiers declarator declaration_list compound_statement
  196                    | declaration_specifiers declarator compound_statement
  197                    | declarator declaration_list compound_statement
  198                    | declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' <Str> (33) 27
    '%' <Str> (37) 35
    '&' <Str> (38) 21 51
    '(' <Str> (40) 4 7 8 20 31 121 124 125 126 146 151 152 153 154 179 180 183 184 185 186
    ')' <Str> (41) 4 7 8 20 31 121 124 125 126 146 151 152 153 154 179 180 183 184 185 186
    '*' <Str> (42) 22 33 127 128 129 130
    '+' <Str> (43) 23 37
    ',' <Str> (44) 14 73 84 113 135 140 157 159
    '-' <Str> (45) 25 38
    '.' <Str> (46) 9
    '/' <Str> (47) 24 34
    ':' <Str> (58) 61 115 116 166 167 168
    ';' <Str> (59) 75 76 107 177 178 184 187 188 189 190
    '<' <Str> (60) 43
    '=' <Str> (61) 64 86
    '>' <Str> (62) 44
    '?' <Str> (63) 61
    '[' <Str> (91) 6 122 123 147 148 149 150
    ']' <Str> (93) 6 122 123 147 148 149 150
    '^' <Str> (94) 53
    '{' <Str> (123) 101 102 156 157 169 170 171 172
    '|' <Str> (124) 55
    '}' <Str> (125) 101 102 156 157 169 170 171 172
    '~' <Str> (126) 26
    error (256)
    IDENTIFIER <Str> (258) 1 9 10 101 103 120 139 140 166
    STRING_VAL <Str> (259) 3
    POINTER_OPERATOR <Str> (260) 10
    DECREMENT <Str> (261) 12 17
    EQUAL_LOGICAL <Str> (262) 48
    GREATER_EQUAL_OPERATOR <Str> (263) 46
    INCREMENT <Str> (264) 11 16
    LESS_EQUAL_OPERATOR <Str> (265) 45
    AND_LOGICAL <Str> (266) 57
    OR_LOGICAL <Str> (267) 59
    NOT_EQUAL_OPERATOR <Str> (268) 49
    LEFT_SHIFT_OPERATOR <Str> (269) 40
    RIGHT_SHIFT_OPERATOR <Str> (270) 41
    PRODUCT_ASSIGNMENT <Str> (271) 65
    DIVIDE_ASSIGNMENT <Str> (272) 66
    MOD_ASSIGNMENT <Str> (273)
    AND_ASSIGNMENT <Str> (274) 69
    ADD_ASSIGNMENT <Str> (275) 67
    OR_ASSIGNMENT <Str> (276) 71
    SUBTRACT_ASSIGNMENT <Str> (277) 68
    XOR_ASSIGNMENT <Str> (278) 70
    BOOL <Str> (279) 93
    CHAR <Str> (280) 90
    SHORT <Str> (281) 91
    INT <Str> (282) 92
    LONG <Str> (283) 94
    SIGNED <Str> (284) 97
    UNSIGNED <Str> (285) 98
    STRING <Str> (286) 99
    FLOAT <Str> (287) 95
    DOUBLE <Str> (288) 96
    VOID <Str> (289) 89
    CONSTANT <Str> (290) 2
    STRUCT <Str> (291) 104
    CONST <Str> (292) 117
    TYPEDEF <Str> (293) 87
    AUTO <Str> (294) 88
    USING <Str> (295)
    CASE <Str> (296) 167
    CONTINUE <Str> (297) 187
    DEFAULT <Str> (298) 168
    BREAK <Str> (299) 188
    DELETE <Str> (300) 29
    DO <Str> (301) 184
    NEW <Str> (302) 28
    FOR <Str> (303) 185 186
    IF <Str> (304) 179
    ELSE <Str> (305) 181
    GOTO <Str> (306)
    RETURN <Str> (307) 189 190
    SWITCH <Str> (308) 180
    WHILE <Str> (309) 183 184
    SIZEOF <Str> (310) 19 20
    SCANF <Str> (311)
    PRINTF <Str> (312)


Nonterminals, with rules where they appear

    $accept (82)
        on left: 0
    primary_expression <Str> (83)
        on left: 1 2 3 4
        on right: 5
    postfix_expression <Str> (84)
        on left: 5 6 7 8 9 10 11 12
        on right: 6 7 8 9 10 11 12 15
    argument_expression_list <Str> (85)
        on left: 13 14
        on right: 8 14
    unary_expression <Str> (86)
        on left: 15 16 17 18 19 20
        on right: 16 17 19 30 63
    unary_operator <Str> (87)
        on left: 21 22 23 24 25 26 27 28 29
        on right: 18
    cast_expression <Str> (88)
        on left: 30 31
        on right: 18 31 32 33 34 35
    multiplicative_expression <Str> (89)
        on left: 32 33 34 35
        on right: 33 34 35 36 37 38
    additive_expression <Str> (90)
        on left: 36 37 38
        on right: 37 38 39 40 41
    shift_expression <Str> (91)
        on left: 39 40 41
        on right: 40 41 42 43 44 45 46
    relational_expression <Str> (92)
        on left: 42 43 44 45 46
        on right: 43 44 45 46 47 48 49
    equality_expression <Str> (93)
        on left: 47 48 49
        on right: 48 49 50 51
    and_expression <Str> (94)
        on left: 50 51
        on right: 51 52 53
    exclusive_or_expression <Str> (95)
        on left: 52 53
        on right: 53 54 55
    inclusive_or_expression <Str> (96)
        on left: 54 55
        on right: 55 56 57
    logical_and_expression <Str> (97)
        on left: 56 57
        on right: 57 58 59
    logical_or_expression <Str> (98)
        on left: 58 59
        on right: 59 60 61
    conditional_expression <Str> (99)
        on left: 60 61
        on right: 61 62 74
    assignment_expression <Str> (100)
        on left: 62 63
        on right: 13 14 63 72 73 155
    assignment_operator <Str> (101)
        on left: 64 65 66 67 68 69 70 71
        on right: 63
    expression <Str> (102)
        on left: 72 73
        on right: 4 6 61 73 178 179 180 183 184 186 190
    constant_expression <Str> (103)
        on left: 74
        on right: 115 116 122 148 150 167
    declaration <Str> (104)
        on left: 75 76
        on right: 173 174 194
    declaration_specifiers <Str> (105)
        on left: 77 78 79 80 81 82
        on right: 75 76 78 80 82 136 137 138 195 196
    init_declarator_list <Str> (106)
        on left: 83 84
        on right: 76 84
    init_declarator <Str> (107)
        on left: 85 86
        on right: 83 84
    storage_class_specifier <Str> (108)
        on left: 87 88
        on right: 77 78
    type_specifier <Str> (109)
        on left: 89 90 91 92 93 94 95 96 97 98 99 100
        on right: 79 80 108 109
    struct_specifier <Str> (110)
        on left: 101 102 103
        on right: 100
    struct_ <Str> (111)
        on left: 104
        on right: 101 102 103
    struct_declaration_list <Str> (112)
        on left: 105 106
        on right: 101 102 106
    struct_declaration <Str> (113)
        on left: 107
        on right: 105 106
    specifier_qualifier_list <Str> (114)
        on left: 108 109 110 111
        on right: 107 108 110 141 142
    struct_declarator_list (115)
        on left: 112 113
        on right: 107 113
    struct_declarator <Str> (116)
        on left: 114 115 116
        on right: 112 113
    type_qualifier <Str> (117)
        on left: 117
        on right: 81 82 110 111 131 132
    declarator <Str> (118)
        on left: 118 119
        on right: 85 86 114 116 121 136 195 196 197 198
    direct_declarator <Str> (119)
        on left: 120 121 122 123 124 125 126
        on right: 118 119 122 123 124 125 126
    pointer <Str> (120)
        on left: 127 128 129 130
        on right: 118 129 130 143 145
    type_qualifier_list <Str> (121)
        on left: 131 132
        on right: 128 130 132
    parameter_type_list <Str> (122)
        on left: 133
        on right: 124 152 154
    parameter_list <Str> (123)
        on left: 134 135
        on right: 133 135
    parameter_declaration <Str> (124)
        on left: 136 137 138
        on right: 134 135
    identifier_list <Str> (125)
        on left: 139 140
        on right: 125 140
    type_name <Str> (126)
        on left: 141 142
        on right: 20 31
    abstract_declarator <Str> (127)
        on left: 143 144 145
        on right: 137 142 146
    direct_abstract_declarator <Str> (128)
        on left: 146 147 148 149 150 151 152 153 154
        on right: 144 145 149 150 153 154
    initializer <Str> (129)
        on left: 155 156 157
        on right: 86 158 159
    initializer_list <Str> (130)
        on left: 158 159
        on right: 156 157 159
    statement <Str> (131)
        on left: 160 161 162 163 164 165
        on right: 166 167 168 175 176 179 180 181 182 183 184 185 186
    labeled_statement <Str> (132)
        on left: 166 167 168
        on right: 160
    compound_statement <Str> (133)
        on left: 169 170 171 172
        on right: 161 195 196 197 198
    declaration_list <Str> (134)
        on left: 173 174
        on right: 171 172 174 195 197
    statement_list <Str> (135)
        on left: 175 176
        on right: 170 172 176
    expression_statement <Str> (136)
        on left: 177 178
        on right: 162 185 186
    selection_statement <Str> (137)
        on left: 179 180
        on right: 163
    stmt <Str> (138)
        on left: 181 182
        on right: 179
    iteration_statement <Str> (139)
        on left: 183 184 185 186
        on right: 164
    jump_statement <Str> (140)
        on left: 187 188 189 190
        on right: 165
    translation_unit <Str> (141)
        on left: 191 192
        on right: 0 192
    external_declaration <Str> (142)
        on left: 193 194
        on right: 191 192
    function_definition <Str> (143)
        on left: 195 196 197 198
        on right: 193


State 0

    0 $accept: . translation_unit $end

    '*'         shift, and go to state 1
    '('         shift, and go to state 2
    IDENTIFIER  shift, and go to state 3
    BOOL        shift, and go to state 4
    CHAR        shift, and go to state 5
    SHORT       shift, and go to state 6
    INT         shift, and go to state 7
    LONG        shift, and go to state 8
    SIGNED      shift, and go to state 9
    UNSIGNED    shift, and go to state 10
    STRING      shift, and go to state 11
    FLOAT       shift, and go to state 12
    DOUBLE      shift, and go to state 13
    VOID        shift, and go to state 14
    STRUCT      shift, and go to state 15
    CONST       shift, and go to state 16
    TYPEDEF     shift, and go to state 17
    AUTO        shift, and go to state 18

    declaration              go to state 19
    declaration_specifiers   go to state 20
    storage_class_specifier  go to state 21
    type_specifier           go to state 22
    struct_specifier         go to state 23
    struct_                  go to state 24
    type_qualifier           go to state 25
    declarator               go to state 26
    direct_declarator        go to state 27
    pointer                  go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

  127 pointer: '*' .
  128        | '*' . type_qualifier_list
  129        | '*' . pointer
  130        | '*' . type_qualifier_list pointer

    '*'    shift, and go to state 1
    CONST  shift, and go to state 16

    $default  reduce using rule 127 (pointer)

    type_qualifier       go to state 32
    pointer              go to state 33
    type_qualifier_list  go to state 34


State 2

  121 direct_declarator: '(' . declarator ')'

    '*'         shift, and go to state 1
    '('         shift, and go to state 2
    IDENTIFIER  shift, and go to state 3

    declarator         go to state 35
    direct_declarator  go to state 27
    pointer            go to state 28


State 3

  120 direct_declarator: IDENTIFIER .

    $default  reduce using rule 120 (direct_declarator)


State 4

   93 type_specifier: BOOL .

    $default  reduce using rule 93 (type_specifier)


State 5

   90 type_specifier: CHAR .

    $default  reduce using rule 90 (type_specifier)


State 6

   91 type_specifier: SHORT .

    $default  reduce using rule 91 (type_specifier)


State 7

   92 type_specifier: INT .

    $default  reduce using rule 92 (type_specifier)


State 8

   94 type_specifier: LONG .

    $default  reduce using rule 94 (type_specifier)


State 9

   97 type_specifier: SIGNED .

    $default  reduce using rule 97 (type_specifier)


State 10

   98 type_specifier: UNSIGNED .

    $default  reduce using rule 98 (type_specifier)


State 11

   99 type_specifier: STRING .

    $default  reduce using rule 99 (type_specifier)


State 12

   95 type_specifier: FLOAT .

    $default  reduce using rule 95 (type_specifier)


State 13

   96 type_specifier: DOUBLE .

    $default  reduce using rule 96 (type_specifier)


State 14

   89 type_specifier: VOID .

    $default  reduce using rule 89 (type_specifier)


State 15

  104 struct_: STRUCT .

    $default  reduce using rule 104 (struct_)


State 16

  117 type_qualifier: CONST .

    $default  reduce using rule 117 (type_qualifier)


State 17

   87 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 87 (storage_class_specifier)


State 18

   88 storage_class_specifier: AUTO .

    $default  reduce using rule 88 (storage_class_specifier)


State 19

  194 external_declaration: declaration .

    $default  reduce using rule 194 (external_declaration)


State 20

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'
  195 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  196                    | declaration_specifiers . declarator compound_statement

    '*'         shift, and go to state 1
    '('         shift, and go to state 2
    ';'         shift, and go to state 36
    IDENTIFIER  shift, and go to state 3

    init_declarator_list  go to state 37
    init_declarator       go to state 38
    declarator            go to state 39
    direct_declarator     go to state 27
    pointer               go to state 28


State 21

   77 declaration_specifiers: storage_class_specifier .
   78                       | storage_class_specifier . declaration_specifiers

    BOOL      shift, and go to state 4
    CHAR      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STRING    shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    VOID      shift, and go to state 14
    STRUCT    shift, and go to state 15
    CONST     shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    AUTO      shift, and go to state 18

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers   go to state 40
    storage_class_specifier  go to state 21
    type_specifier           go to state 22
    struct_specifier         go to state 23
    struct_                  go to state 24
    type_qualifier           go to state 25


State 22

   79 declaration_specifiers: type_specifier .
   80                       | type_specifier . declaration_specifiers

    BOOL      shift, and go to state 4
    CHAR      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STRING    shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    VOID      shift, and go to state 14
    STRUCT    shift, and go to state 15
    CONST     shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    AUTO      shift, and go to state 18

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers   go to state 41
    storage_class_specifier  go to state 21
    type_specifier           go to state 22
    struct_specifier         go to state 23
    struct_                  go to state 24
    type_qualifier           go to state 25


State 23

  100 type_specifier: struct_specifier .

    $default  reduce using rule 100 (type_specifier)


State 24

  101 struct_specifier: struct_ . IDENTIFIER '{' struct_declaration_list '}'
  102                 | struct_ . '{' struct_declaration_list '}'
  103                 | struct_ . IDENTIFIER

    '{'         shift, and go to state 42
    IDENTIFIER  shift, and go to state 43


State 25

   81 declaration_specifiers: type_qualifier .
   82                       | type_qualifier . declaration_specifiers

    BOOL      shift, and go to state 4
    CHAR      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STRING    shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    VOID      shift, and go to state 14
    STRUCT    shift, and go to state 15
    CONST     shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    AUTO      shift, and go to state 18

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 21
    type_specifier           go to state 22
    struct_specifier         go to state 23
    struct_                  go to state 24
    type_qualifier           go to state 25


State 26

  197 function_definition: declarator . declaration_list compound_statement
  198                    | declarator . compound_statement

    '{'       shift, and go to state 45
    BOOL      shift, and go to state 4
    CHAR      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STRING    shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    VOID      shift, and go to state 14
    STRUCT    shift, and go to state 15
    CONST     shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    AUTO      shift, and go to state 18

    declaration              go to state 46
    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 21
    type_specifier           go to state 22
    struct_specifier         go to state 23
    struct_                  go to state 24
    type_qualifier           go to state 25
    compound_statement       go to state 48
    declaration_list         go to state 49


State 27

  119 declarator: direct_declarator .
  122 direct_declarator: direct_declarator . '[' constant_expression ']'
  123                  | direct_declarator . '[' ']'
  124                  | direct_declarator . '(' parameter_type_list ')'
  125                  | direct_declarator . '(' identifier_list ')'
  126                  | direct_declarator . '(' ')'

    '('  shift, and go to state 50
    '['  shift, and go to state 51

    $default  reduce using rule 119 (declarator)


State 28

  118 declarator: pointer . direct_declarator

    '('         shift, and go to state 2
    IDENTIFIER  shift, and go to state 3

    direct_declarator  go to state 52


State 29

    0 $accept: translation_unit . $end
  192 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 53
    '*'         shift, and go to state 1
    '('         shift, and go to state 2
    IDENTIFIER  shift, and go to state 3
    BOOL        shift, and go to state 4
    CHAR        shift, and go to state 5
    SHORT       shift, and go to state 6
    INT         shift, and go to state 7
    LONG        shift, and go to state 8
    SIGNED      shift, and go to state 9
    UNSIGNED    shift, and go to state 10
    STRING      shift, and go to state 11
    FLOAT       shift, and go to state 12
    DOUBLE      shift, and go to state 13
    VOID        shift, and go to state 14
    STRUCT      shift, and go to state 15
    CONST       shift, and go to state 16
    TYPEDEF     shift, and go to state 17
    AUTO        shift, and go to state 18

    declaration              go to state 19
    declaration_specifiers   go to state 20
    storage_class_specifier  go to state 21
    type_specifier           go to state 22
    struct_specifier         go to state 23
    struct_                  go to state 24
    type_qualifier           go to state 25
    declarator               go to state 26
    direct_declarator        go to state 27
    pointer                  go to state 28
    external_declaration     go to state 54
    function_definition      go to state 31


State 30

  191 translation_unit: external_declaration .

    $default  reduce using rule 191 (translation_unit)


State 31

  193 external_declaration: function_definition .

    $default  reduce using rule 193 (external_declaration)


State 32

  131 type_qualifier_list: type_qualifier .

    $default  reduce using rule 131 (type_qualifier_list)


State 33

  129 pointer: '*' pointer .

    $default  reduce using rule 129 (pointer)


State 34

  128 pointer: '*' type_qualifier_list .
  130        | '*' type_qualifier_list . pointer
  132 type_qualifier_list: type_qualifier_list . type_qualifier

    '*'    shift, and go to state 1
    CONST  shift, and go to state 16

    $default  reduce using rule 128 (pointer)

    type_qualifier  go to state 55
    pointer         go to state 56


State 35

  121 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 57


State 36

   75 declaration: declaration_specifiers ';' .

    $default  reduce using rule 75 (declaration)


State 37

   76 declaration: declaration_specifiers init_declarator_list . ';'
   84 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 58
    ','  shift, and go to state 59


State 38

   83 init_declarator_list: init_declarator .

    $default  reduce using rule 83 (init_declarator_list)


State 39

   85 init_declarator: declarator .
   86                | declarator . '=' initializer
  195 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  196                    | declaration_specifiers declarator . compound_statement

    '='       shift, and go to state 60
    '{'       shift, and go to state 45
    BOOL      shift, and go to state 4
    CHAR      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STRING    shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    VOID      shift, and go to state 14
    STRUCT    shift, and go to state 15
    CONST     shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    AUTO      shift, and go to state 18

    $default  reduce using rule 85 (init_declarator)

    declaration              go to state 46
    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 21
    type_specifier           go to state 22
    struct_specifier         go to state 23
    struct_                  go to state 24
    type_qualifier           go to state 25
    compound_statement       go to state 61
    declaration_list         go to state 62


State 40

   78 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 78 (declaration_specifiers)


State 41

   80 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 80 (declaration_specifiers)


State 42

  102 struct_specifier: struct_ '{' . struct_declaration_list '}'

    BOOL      shift, and go to state 4
    CHAR      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STRING    shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    VOID      shift, and go to state 14
    STRUCT    shift, and go to state 15
    CONST     shift, and go to state 16

    type_specifier            go to state 63
    struct_specifier          go to state 23
    struct_                   go to state 24
    struct_declaration_list   go to state 64
    struct_declaration        go to state 65
    specifier_qualifier_list  go to state 66
    type_qualifier            go to state 67


State 43

  101 struct_specifier: struct_ IDENTIFIER . '{' struct_declaration_list '}'
  103                 | struct_ IDENTIFIER .

    '{'  shift, and go to state 68

    $default  reduce using rule 103 (struct_specifier)


State 44

   82 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 82 (declaration_specifiers)


State 45

  169 compound_statement: '{' . '}'
  170                   | '{' . statement_list '}'
  171                   | '{' . declaration_list '}'
  172                   | '{' . declaration_list statement_list '}'

    '~'         shift, and go to state 69
    '&'         shift, and go to state 70
    '+'         shift, and go to state 71
    '-'         shift, and go to state 72
    '/'         shift, and go to state 73
    '*'         shift, and go to state 74
    '('         shift, and go to state 75
    '!'         shift, and go to state 76
    '{'         shift, and go to state 45
    '}'         shift, and go to state 77
    ';'         shift, and go to state 78
    IDENTIFIER  shift, and go to state 79
    STRING_VAL  shift, and go to state 80
    DECREMENT   shift, and go to state 81
    INCREMENT   shift, and go to state 82
    BOOL        shift, and go to state 4
    CHAR        shift, and go to state 5
    SHORT       shift, and go to state 6
    INT         shift, and go to state 7
    LONG        shift, and go to state 8
    SIGNED      shift, and go to state 9
    UNSIGNED    shift, and go to state 10
    STRING      shift, and go to state 11
    FLOAT       shift, and go to state 12
    DOUBLE      shift, and go to state 13
    VOID        shift, and go to state 14
    CONSTANT    shift, and go to state 83
    STRUCT      shift, and go to state 15
    CONST       shift, and go to state 16
    TYPEDEF     shift, and go to state 17
    AUTO        shift, and go to state 18
    CASE        shift, and go to state 84
    CONTINUE    shift, and go to state 85
    DEFAULT     shift, and go to state 86
    BREAK       shift, and go to state 87
    DELETE      shift, and go to state 88
    DO          shift, and go to state 89
    NEW         shift, and go to state 90
    FOR         shift, and go to state 91
    IF          shift, and go to state 92
    RETURN      shift, and go to state 93
    SWITCH      shift, and go to state 94
    WHILE       shift, and go to state 95
    SIZEOF      shift, and go to state 96

    primary_expression         go to state 97
    postfix_expression         go to state 98
    unary_expression           go to state 99
    unary_operator             go to state 100
    cast_expression            go to state 101
    multiplicative_expression  go to state 102
    additive_expression        go to state 103
    shift_expression           go to state 104
    relational_expression      go to state 105
    equality_expression        go to state 106
    and_expression             go to state 107
    exclusive_or_expression    go to state 108
    inclusive_or_expression    go to state 109
    logical_and_expression     go to state 110
    logical_or_expression      go to state 111
    conditional_expression     go to state 112
    assignment_expression      go to state 113
    expression                 go to state 114
    declaration                go to state 46
    declaration_specifiers     go to state 47
    storage_class_specifier    go to state 21
    type_specifier             go to state 22
    struct_specifier           go to state 23
    struct_                    go to state 24
    type_qualifier             go to state 25
    statement                  go to state 115
    labeled_statement          go to state 116
    compound_statement         go to state 117
    declaration_list           go to state 118
    statement_list             go to state 119
    expression_statement       go to state 120
    selection_statement        go to state 121
    iteration_statement        go to state 122
    jump_statement             go to state 123


State 46

  173 declaration_list: declaration .

    $default  reduce using rule 173 (declaration_list)


State 47

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'

    '*'         shift, and go to state 1
    '('         shift, and go to state 2
    ';'         shift, and go to state 36
    IDENTIFIER  shift, and go to state 3

    init_declarator_list  go to state 37
    init_declarator       go to state 38
    declarator            go to state 124
    direct_declarator     go to state 27
    pointer               go to state 28


State 48
